--- a/package.json
+++ b/package.json
@@ -13,19 +13,24 @@
   },
   "dependencies": {
     "@nuxtjs/auth": "^4.9.1",
-    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/axios": "^5.12.5",
     "@nuxtjs/bulma": "^1.2.1",
+    "@nuxtjs/cloudinary": "^1.0.3-beta-2",
     "@nuxtjs/dotenv": "^1.4.0",
-    "nuxt": "^2.0.0"
+    "@nuxtjs/strapi": "^0.1.10",
+    "dotenv": "^8.2.0",
+    "nuxt": "^2.0.0",
+    "tsutils": "^3.19.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.1.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "vue": "^2.6.12"
   }
 }
